# injector

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.win32  README.md
.github/workflows/: gh-pages.yml  test.yml
cmd/: Makefile  Makefile.win32  main.c
cmd/macos-sign/: entitlement.xml  genkey.sh  sign.sh
docs/: dir_d44c64559bbebec7f509842c48db8b23.html  files.html  globals.html  globals_func.html  globals_type.html  graph_legend.html  index.html  injector_8h.html  injector_8h__incl.dot  injector_8h__incl.map  injector_8h__incl.md5  injector_8h_source.html  md_README.html  menudata.js  pages.html
docs/search/: all_0.js  files_0.js  functions_0.js  pages_0.js  searchdata.js  typedefs_0.js
include/: injector.h
src/: Makefile  cpudep.c  elf.c  injector.c  injector_internal.h  ptrace.c  remote_call.c  util.c
src/linux/: Makefile  elf.c  injector.c  injector_internal.h  ptrace.c  remote_call.c  shellcode.S  util.c
src/macos/: Makefile  exc_handler.c  injector.c  injector_internal.h  mach.c  mach_exc.h  mach_excServer.c  ptrace.c  remote_call.c  util.c
src/windows/: GNUmakefile  Makefile.win32  injector.c  injector.def
tests/: Makefile  Makefile.win32  test-library.c  test-prog.c  test-target.c  test-target.def
